syntax = "proto3";

package ANY;

option java_package = "de.lbe.sandbox.protobuf.any";
option java_multiple_files = true;

import "google/protobuf/any.proto";

message ErrorStatus {
  string message = 1;
  google.protobuf.Any details = 2;
}
